ADD the crud methods and adding some packages

--- a/WebApplication1/WebApplication1/appsettings.json
+++ b/WebApplication1/WebApplication1/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SchoolManagmentConnection": "Server=DESKTOP-7H4B19K\\SQLEXPRESS;Database=FirstAsp;User Id=ali;Password=12345678;Trusted_Connection=false;MultipleActiveResultSets=True;Encrypt=false;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,3 +10,4 @@
   },
   "AllowedHosts": "*"
 }
+
