Last changes before adding styling and make in it fully functional

--- a/WebApplication1/WebApplication1/appsettings.json
+++ b/WebApplication1/WebApplication1/appsettings.json
@@ -8,6 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Auth0":{
+    "Domain":"dev-dimioczjbsbsezfy.us.auth0.com",
+    "ClientId":"AZrW7A7EweMNeolGt08QMCtIiN0ZSWj9"
+  }
 }
 
